--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
   <button id="rollBtn">Roll Dice</button>
 </div>
 
+  <div id="greeting" class="greeting"></div>
+
+<div id="spinner" class="name-spinner" style="display:none">
+  <div class="spinner-inner" id="spinnerInner"></div>
+</div>
+
 <div id="result">
   <h2>Your Secret Santa</h2>
   <div id="assignedName"></div>
