--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport"
-        content="width=device-width, initial-scale=1, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <title>Secret Santa</title>
 
   <meta name="mobile-web-app-capable" content="yes">
@@ -11,41 +11,48 @@
 
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<h1>🎄 Secret Santa Dice Game</h1>
+  <section class="hero">
+    <div class="container">
+      <h1>🎄 Secret Santa Dice Game</h1>
 
-<div id="login">
-  <p>Enter your secret answer</p>
-  <input type="text" id="secretAnswer" placeholder="Your answer">
-  <button id="unlockBtn">Unlock</button>
-  <p id="loginMsg"></p>
-</div>
+      <div id="login">
+        <p>Enter your secret answer</p>
+        <input type="text" id="secretAnswer" placeholder="Your answer">
+        <button id="unlockBtn">Unlock</button>
+        <p id="loginMsg"></p>
+      </div>
 
-<div id="game">
-  <p>Tap the dice 🎲</p>
-  <div id="dice">🎲</div>
-  <button id="rollBtn">Roll Dice</button>
-</div>
+      <div id="game">
+        <p>Tap the dice 🎲</p>
+        <div id="dice">🎲</div>
+        <button id="rollBtn">Roll Dice</button>
+      </div>
 
-  <div id="greeting" class="greeting"></div>
+      <div id="greeting" class="greeting"></div>
 
-<div id="spinner" class="name-spinner" style="display:none">
-  <div class="spinner-inner" id="spinnerInner"></div>
-</div>
+      <div id="spinner" class="name-spinner" style="display:none">
+        <div class="spinner-inner" id="spinnerInner"></div>
+      </div>
 
-<div id="result">
-  <h2>Your Secret Santa</h2>
-  <div id="assignedName"></div>
-  <div id="qr"></div>
-</div>
+      <div id="result">
+        <h2>Your Secret Santa</h2>
+        <div id="assignedName"></div>
+        <div id="qr"></div>
+      </div>
 
-<div id="warningOverlay" class="warning-overlay">
-  🔒 Screenshots are discouraged.<br><br>
-  Please return to the app.
-</div>
+      <div id="warningOverlay" class="warning-overlay">
+        🔒 Screenshots are discouraged.<br><br>
+        Please return to the app.
+      </div>
 
-<script src="https://cdn.jsdelivr.net/npm/qrious@4.0.2/dist/qrious.min.js"></script>
-<script src="script.js"></script>
+    </div>
+  </section>
+
+  <script src="https://cdn.jsdelivr.net/npm/qrious@4.0.2/dist/qrious.min.js"></script>
+  <script src="script.js"></script>
 </body>
+
 </html>
