--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
 
   <section class="hero">
+    <video src="./video/santa.mp4"></video>
     <div class="container">
       <h1>🎄 Secret Santa Dice Game</h1>
 
