--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
   <section class="hero">
-    <video src="./video/santa.mp4" class="backgroundSanta"></video>
+    <video src="./video/santa.mp4" class="backgroundSanta" autoplay loop></video>
     <div class="container">
       <h1>🎄 Secret Santa Dice Game</h1>
 
